gccida/g0/ix86_hard_regno_mode_ok
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_hard_regno_mode_ok/src/i386.c:12846:42: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_hard_regno_mode_ok( int regno, machine_mode mode) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_hard_regno_mode_ok/src/i386.c:12849:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
return mode_class_0[mode] == MODE_CC; 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_hard_regno_mode_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_hard_regno_mode_ok/src/i386.c:12850:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_CC || mode_class_0[mode] == MODE_RANDOM || mode_class_0[mode] == MODE_PARTIAL_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_hard_regno_mode_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_hard_regno_mode_ok/src/i386.c:12850:39: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_CC || mode_class_0[mode] == MODE_RANDOM || mode_class_0[mode] == MODE_PARTIAL_INT ) 
                                      ^~~~~~~~~~~~
                                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_hard_regno_mode_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_hard_regno_mode_ok/src/i386.c:12850:76: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_CC || mode_class_0[mode] == MODE_RANDOM || mode_class_0[mode] == MODE_PARTIAL_INT ) 
                                                                           ^~~~~~~~~~~~
                                                                           mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_hard_regno_mode_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_hard_regno_mode_ok/src/obj/i386.o] Error 1
